# test_server

./: Cargo.toml  TODO.md  test.py
assets/: cal.json  panel.html  students.json  swagger.json  swagger_ui.html
db/: Cargo.toml
db/src/: assets.rs  json.rs  lib.rs  models.rs  seed.rs
filters/: Cargo.toml
filters/src/: authed.rs  delayed.rs  lib.rs  with_db.rs
src/: assets.rs  main.rs  service.rs  utils.rs
src/db/: json.rs  mod.rs  models.rs  seed.rs
src/filters/: authed.rs  delayed.rs  mod.rs  with_db.rs
src/routes/: auth.rs  class.rs  classroom.rs  globals.rs  manage.rs  mod.rs  occupancy.rs  profile.rs  student.rs  subject.rs  teacher.rs
