[package]
name = "db"
version = "0.1.0"
authors = ["Nicolas Bourras <dev@nicolasb.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tokio = { version = "0.2.19", features = ["macros"] }
unidecode = "0.3.0"
bimap = { version = "0.4.0", features = ["serde"] }
rand = "0.7.3"
log = "0.4.8"
bincode = "1.2.1"
